doc-surrealdb_versioned_docs/version-1.x/surrealql/functions/database/rand.mdx
---
sidebar_position: 13
sidebar_label: Rand functions
title: Rand functions | SurrealQL
description: These functions can be used when generating random data values.
---

# Rand functions

These functions can be used when generating random data values.

<table>
  <thead>
    <tr>
      <th scope="col">Function</th>
      <th scope="col">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td scope="row" data-label="Function"><a href="#rand"><code>rand()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random floating point number</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randbool"><code>rand::bool()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random boolean</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randenum"><code>rand::enum()</code></a></td>
      <td scope="row" data-label="Description">Randomly picks a value from the specified values</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randfloat"><code>rand::float()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random floating point number</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randguid"><code>rand::guid()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random guid</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randint"><code>rand::int()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random integer</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randstring"><code>rand::string()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random string</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randtime"><code>rand::time()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random datetime</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randuuid"><code>rand::uuid()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random UUID</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randuuidv4"><code>rand::uuid::v4()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random Version 4 UUID</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randuuidv7"><code>rand::uuid::v7()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random Version 7 UUID</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#randulid"><code>rand::ulid()</code></a></td>
      <td scope="row" data-label="Description">Generates and returns a random ULID</td>
    </tr>
  </tbody>
</table>

## `rand`

The rand function generates a random [`float`](/docs/surrealdb/surrealql/datamodel/numbers#floating-point-numbers), between 0 and 1.

```surql title="API DEFINITION"
rand() -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand();

0.7062321084863658
```
The following example shows this function being used in a [`SELECT`](/docs/surrealdb/surrealql/statements/select) statement with an `ORDER BY` clause:

```surql
SELECT * FROM [{ age: 33 }, { age: 45 }, { age: 39 }] ORDER BY rand();


[
	{
		age: 45
	},
	{
		age: 39
	},
	{
		age: 33
	}
]
```

<br />

## `rand::bool`

The rand::bool function generates a random [`boolean`](/docs/surrealdb/surrealql/datamodel/booleans) value.

```surql title="API DEFINITION"
rand::bool() -> bool
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::bool();

true
```

<br />

## `rand::enum`

The `rand::enum` function generates a random value, from a multitude of values.



```surql title="API DEFINITION"
rand::enum(value...) -> any
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::enum('one', 'two', 3, 4.15385, 'five', true);

"five"
```

<br />

## `rand::float`

The `rand::float` function generates a random [`float`](/docs/surrealdb/surrealql/datamodel/numbers#floating-point-numbers), between `0` and `1`.



```surql title="API DEFINITION"
rand::float() -> float
```
If two numbers are provided, then the function generates a random [`float`](/docs/surrealdb/surrealql/datamodel/numbers#floating-point-numbers), between two numbers.

```surql title="API DEFINITION"
rand::float(number, number) -> float
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::float();

0.7812733136200293
```
```surql
RETURN rand::float(10, 15);

11.305355983514927
```

<br />

## `rand::guid`

The `rand::guid` function generates a 20-character random guid.



```surql title="API DEFINITION"
rand::guid() -> string
```
If a number is provided, then the function generates a random guid, with a specific length.

```surql title="API DEFINITION"
rand::guid(number) -> string
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::guid();

"4uqmrmtjhtjeg77et0dl"
```
```surql
RETURN rand::guid(10);

"f3b6cjh0nt"
```

<br />

## `rand::int`

The `rand::int`  function generates a random int.



```surql title="API DEFINITION"
rand::int() -> int
```
If two numbers are provided, then the function generates a random int, between two numbers.

```surql title="API DEFINITION"
rand::int(number, number) -> int
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::int();

6841551695902514727
```
```surql
RETURN rand::int(10, 15);

13
```

<br />

## `rand::string`

The `rand::string` function generates a random string, with 32 characters.



```surql title="API DEFINITION"
rand::string() -> string
```
The `rand::string` function generates a random string, with a specific length.

```surql title="API DEFINITION"
rand::string(number) -> string
```

If two numbers are provided, then the function generates a random string, with a length between two numbers.

```surql title="API DEFINITION"
rand::string(number, number) -> string
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::string();

"N8Q86mklN6U7kv0A2XCRh5UlpQMSvdoT"
```
```surql
RETURN rand::string(15);

"aSCtrfJj4pSJ7Xq"
```
```surql
RETURN rand::string(10, 15);

"rEUWFUMcx0YH"
```

<br />

## `rand::time`

The `rand::time` function generates a random [`datetime`](/docs/surrealdb/surrealql/datamodel/datetimes).



```surql title="API DEFINITION"
rand::time() -> datetime
```
The rand::time function generates a random [`datetime`](/docs/surrealdb/surrealql/datamodel/datetimes), between two unix timestamps.

```surql title="API DEFINITION"
rand::time(number, number) -> datetime
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::time();

"2026-09-07T04:27:53Z"
```
```surql
RETURN rand::time(198371, 1223138713);

"1991-01-13T23:27:17Z"
```

<br />

## `rand::uuid`

The `rand::uuid` function generates a random UUID.

```surql title="API DEFINITION"
rand::uuid() -> uuid
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::uuid();

"e20b2836-e689-4643-998d-b17a16800323"
```

<br />

## `rand::uuid::v4`

The `rand::uuid::v4` function generates a random UUID.

```surql title="API DEFINITION"
rand::uuid::v4() -> uuid
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::uuid::v4();

"4def23a5-a847-4934-8dad-c64ccc48921b"
```

<br />

## `rand::uuid::v7`

The `rand::uuid::v7` function generates a random Version 7 UUID.

```surql title="API DEFINITION"
rand::uuid::v7() -> uuid
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::uuid::v7();

"01843a54-32e1-71eb-af07-5901fc190877"
```
To enable `rand::uuid::v7` in [embedded mode](/docs/surrealdb/embedding/rust) you need to add the following to your `.cargo/config.toml` file in your project

```toml
[build]
rustflags = ["--cfg", "uuid_unstable"]
```

<br />

## `rand::ulid`

The `rand::ulid` function generates a random ULID.

```surql title="API DEFINITION"
rand::ulid() -> ulid
```

The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/surrealql/statements/return) statement:

```surql
RETURN rand::ulid();

"01H9QDG81Q7SB33RXB7BEZBK7G"
```

<br /><br />
